@@ -2,6 +2,7 @@
 # this repository contains the full copyright notices and license terms.
 import gtk
 
+from tryton.config import CONFIG
 from .widget import Widget
 
 
@@ -45,7 +46,7 @@ class TimeDelta(Widget):
     def _readonly_set(self, value):
         super(TimeDelta, self)._readonly_set(value)
         self.entry.set_editable(not value)
-        if value:
+        if value and CONFIG['client.fast_tabbing']:
             self.widget.set_focus_chain([])
         else:
-            self.widget.set_focus_chain([self.entry])
+            self.widget.unset_focus_chain()
